--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,21 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Red Hat Display", sans-serif;
   background-color: #fafafa;
   color: #28283d;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
 }
 
 header {
@@ -13,6 +25,16 @@ header {
   padding: 20px;
   background-color: #4d96a9;
   color: #fafafa;
+  width: 100%;
+}
+
+main {
+  width: 100%;
+  flex-grow: 1;
+}
+
+footer {
+  width: 100%;
 }
 
 h1 {
