--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,31 @@ main {
 }
 
 footer {
+  position: relative;
   width: 100%;
+  padding: 64px 32px;
+  background: #8fe3f9 url("../assets/mobile/image-footer.jpg") no-repeat center center;
+  background-size: cover;
+  color: #fafafa;
+}
+footer h2 {
+  font: clamp(32px, 5vw, 40px)/110% "Red Hat Display", sans-serif;
+}
+
+footer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(77, 150, 169, 0.8);
+  z-index: 0;
+}
+
+footer * {
+  position: relative;
+  z-index: 1;
 }
 
 h1 {
@@ -43,12 +67,11 @@ h1 {
   letter-spacing: 0px;
 }
 
-h2 {
+/* h2 {
   font-size: 40px;
   line-height: 110%;
   letter-spacing: 0px;
-}
-
+} */
 h3 {
   font-size: 16px;
   line-height: 110%;
@@ -66,7 +89,7 @@ button {
   padding: 16px 40px;
   border: none;
   border-radius: 29px;
-  font-size: 16px;
+  font: 16px/150% "Red Hat Display", sans-serif;
   cursor: pointer;
 }
 button.purple {
