--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap");
+/* reset */
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -20,69 +24,114 @@ body {
 
 header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background-color: #4d96a9;
-  color: #fafafa;
-  width: 100%;
+  padding-top: 48px;
+}
+header .logo {
+  width: 112px;
+  height: 28px;
+  background-image: url("../assets/logo.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 main {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
   flex-grow: 1;
+}
+main .hero {
+  width: 120%;
+  height: 160px;
+  background-image: url("../assets/tablet/image-hero.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+main section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  padding: 64px 32px;
+  gap: 48px;
+}
+main article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  max-width: 305px;
+}
+main article h1 {
+  font: clamp(40px, 5vw, 64px)/110% "Red Hat Display", sans-serif;
+  color: #28283d;
+  font-weight: 900;
+  letter-spacing: 1px;
+}
+main article p {
+  font: 500 clamp(14px, 5vw, 16px)/150% "Red Hat Display", sans-serif;
+  color: #87879d;
+}
+main article .actions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
 }
 
 footer {
-  position: relative;
-  width: 100%;
   padding: 64px 32px;
-  background: #8fe3f9 url("../assets/mobile/image-footer.jpg") no-repeat center center;
-  background-size: cover;
   color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  text-align: center;
+  max-width: 504px;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+  background-image: url("../assets/mobile/image-footer.jpg");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 1;
 }
-footer h2 {
-  font: clamp(32px, 5vw, 40px)/110% "Red Hat Display", sans-serif;
-}
-
 footer::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   background-color: rgba(77, 150, 169, 0.8);
-  z-index: 0;
+  z-index: -1;
+}
+footer h2 {
+  font: 800 clamp(32px, 5vw, 40px)/110% "Red Hat Display", sans-serif;
+}
+footer p {
+  font: 500 clamp(14px, 5vw, 16px)/150% "Red Hat Display", sans-serif;
+  letter-spacing: 0.2px;
+  text-align: center;
+  height: auto;
+}
+@media (min-width: 600px) {
+  footer p {
+    white-space: normal;
+  }
 }
 
-footer * {
-  position: relative;
-  z-index: 1;
-}
-
-h1 {
-  font-size: 64px;
-  line-height: 110%;
-  letter-spacing: 0px;
-}
-
-/* h2 {
-  font-size: 40px;
-  line-height: 110%;
-  letter-spacing: 0px;
-} */
 h3 {
   font-size: 16px;
   line-height: 110%;
   letter-spacing: 4px;
 }
 
-p {
+/* p {
   font-size: 16px;
   line-height: 150%;
 }
-
+ */
 button {
   background-color: #855fb1;
   color: #fafafa;
@@ -90,13 +139,20 @@ button {
   border: none;
   border-radius: 29px;
   font: 16px/150% "Red Hat Display", sans-serif;
+  font-weight: 900;
   cursor: pointer;
+  width: fit-content;
+  display: flex;
+  gap: 4px;
 }
 button.purple {
   background-color: #855fb1;
 }
+button.purple span {
+  color: #d9b8ff;
+}
 button.purple:hover {
-  background-color: #d9b8ff;
+  background-color: #b18bdd;
 }
 button.cyan {
   background-color: #4d96a9;
