--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap");
 // Variables
 $cyan-600: #4d96a9;
 $cyan-300: #8fe3f9;
@@ -12,12 +13,15 @@ $white: #fafafa;
 $font-primary: "Red Hat Display", sans-serif;
 
 $text-preset-1: clamp(40px, 5vw, 64px) / 110% $font-primary;
-$text-preset-2: clamp(32px, 5vw, 40px) / 110% $font-primary;
+$text-preset-2: 800 clamp(32px, 5vw, 40px) / 110% $font-primary;
 $text-preset-3: clamp(12px, 5vw, 16px) / 110% $font-primary; // letter spacing 4px;
-$text-preset-4: clamp(14px, 5vw, 18px) / 150% $font-primary;
+$text-preset-4: 500 clamp(14px, 5vw, 16px) / 150% $font-primary;
 $text-preset-5: 16px/150% $font-primary;
 
-* {
+/* reset */
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -39,60 +43,113 @@ body {
 
 header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background-color: $cyan-600;
-  color: $white;
-  width: 100%;
+  padding-top: 48px;
+
+  .logo {
+    width: 112px;
+    height: 28px;
+    background-image: url("../assets/logo.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 }
 
 main {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
   flex-grow: 1;
+
+  .hero {
+    width: 120%;
+    height: 160px;
+    background-image: url("../assets/tablet/image-hero.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden; // Prevents margin collapse
+    padding: 64px 32px;
+    gap: 48px;
+  }
+
+  article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    max-width: 305px;
+
+    h1 {
+      font: $text-preset-1;
+      color: $slate-900;
+      font-weight: 900;
+      letter-spacing: 1px;
+    }
+
+    p {
+      font: $text-preset-4;
+      color: $slate-600;
+    }
+
+    .actions {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+    }
+  }
 }
 
 footer {
-  position: relative;
-  width: 100%;
   padding: 64px 32px;
-  background: $cyan-300 url("../assets/mobile/image-footer.jpg") no-repeat
-    center center;
-  background-size: cover;
   color: $white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  text-align: center;
+  max-width: 504px;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+
+  background-image: url("../assets/mobile/image-footer.jpg");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 1;
+
+  // Create an overlay
+  &::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: rgba(77, 150, 169, 0.8); // Cyan with 80% opacity
+    z-index: -1;
+  }
 
   h2 {
     font: $text-preset-2;
   }
-}
 
-footer::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(77, 150, 169, 0.8); // Cyan with 80% opacity
-  z-index: 0;
-}
+  p {
+    font: $text-preset-4;
+    letter-spacing: 0.2px;
+    text-align: center;
+    height: auto;
 
-footer * {
-  position: relative;
-  z-index: 1;
+    @media (min-width: 600px) {
+      white-space: normal;
+    }
+  }
 }
-
-h1 {
-  font-size: 64px;
-  line-height: 110%;
-  letter-spacing: 0px;
-}
-
-/* h2 {
-  font-size: 40px;
-  line-height: 110%;
-  letter-spacing: 0px;
-} */
 
 h3 {
   font-size: 16px;
@@ -100,11 +157,11 @@ h3 {
   letter-spacing: 4px;
 }
 
-p {
+/* p {
   font-size: 16px;
   line-height: 150%;
 }
-
+ */
 button {
   background-color: $purple-600;
   color: $white;
@@ -112,12 +169,20 @@ button {
   border: none;
   border-radius: 29px;
   font: $text-preset-5;
+  font-weight: 900;
   cursor: pointer;
+  width: fit-content;
+  display: flex;
+  gap: 4px;
 
   &.purple {
     background-color: $purple-600;
+    span {
+      color: $purple-300;
+    }
+
     &:hover {
-      background-color: $purple-300;
+      background-color: #b18bdd;
     }
   }
 
