--- a/css/styles.css
+++ b/css/styles.css
@@ -53,31 +53,71 @@ main section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
   padding: 64px 32px;
+}
+main #intro {
   gap: 48px;
 }
-main article {
+main #intro article {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 24px;
   max-width: 305px;
 }
-main article h1 {
+main #intro article h1 {
   font: clamp(40px, 5vw, 64px)/110% "Red Hat Display", sans-serif;
   color: #28283d;
   font-weight: 900;
   letter-spacing: 1px;
 }
-main article p {
+main #intro article p {
   font: 500 clamp(14px, 5vw, 16px)/150% "Red Hat Display", sans-serif;
   color: #87879d;
 }
-main article .actions {
+main #intro article .actions {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 16px;
+}
+main #content {
+  gap: 64px;
+}
+main #content .images-block {
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+main #content .images-block .image {
+  border-radius: 8px;
+  height: 144px;
+  max-width: 147.5px;
+}
+main #content .description {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+main #content .description h3 {
+  font: clamp(12px, 2vw, 16px)/110% "Red Hat Display", sans-serif;
+  color: #4d96a9;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+main #content .description h2 {
+  font: 800 clamp(32px, 5vw, 40px)/110% "Red Hat Display", sans-serif;
+  color: #28283d;
+  font-weight: 900;
+}
+main #content .description p {
+  font: 500 clamp(14px, 5vw, 16px)/150% "Red Hat Display", sans-serif;
+  color: #87879d;
+}
+main #content .title {
+  display: flex;
+  flex-direction: column;
   gap: 16px;
 }
 
