--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@ header .logo {
   background-repeat: no-repeat;
   background-position: center;
 }
+@media (min-width: 800px) {
+  header {
+    padding-top: 80px;
+  }
+}
 
 main {
   width: 100%;
@@ -335,7 +340,7 @@ button.cyan span {
   color: #8fe3f9;
 }
 button.cyan:hover {
-  background-color: #8fe3f9;
+  background-color: #71C0D4;
 }
 
 /*# sourceMappingURL=styles.css.map */
